--- a/index.html
+++ b/index.html
@@ -1,18 +1,69 @@
-<!doctype html><html lang=en x-data :class=$store.darkMode.class() :data-theme=$store.darkMode.theme()><head><meta charset=UTF-8><meta name=viewport content="width=device-width,initial-scale=1"><title>Home |</title><link rel=canonical href=/><meta name=author content><meta name=description content><meta name=generator content="Hugo 0.148.2"><meta property="og:url" content="/"><meta property="og:locale" content="en"><meta property="og:type" content="website"><meta name=twitter:card content="summary"><link rel=stylesheet href=/css/output.min.css><script defer src=https://cdn.jsdelivr.net/npm/alpinejs@3/dist/cdn.min.js integrity="sha256-PtHu0lJIiSHfZeNj1nFd6wTX+Squ255SGZ/fc8seCtM=" crossorigin=anonymous></script></head><body x-data="{
-    flip: false,
-  }"><div id=dream-global-bg></div><nav class="mt-4 lg:mt-8 py-4"><div class="container flex justify-between px-4"><section class="flex items-center gap-4"><div class="avatar cursor-pointer hover:avatar-online" @click="flip = !flip" title="Flip it!"><div class="h-10 rounded-full"><img src=/ alt></div></div></section><div class="dropdown dropdown-end sm:hidden"><div tabindex=0 role=button class="btn btn-ghost btn-square" aria-label="Select an option"><ion-icon name=menu class=text-2xl></ion-icon></div><ul tabindex=0 class="dropdown-content menu w-36 bg-base-100 rounded-box z-1 shadow-md"><li><a class="inline-flex items-center p-2 cursor-pointer" href=/posts title=Archives><ion-icon name=archive></ion-icon>Archives</a></li><li><a class="inline-flex items-center p-2 cursor-pointer" href=/categories title="All Categories"><ion-icon name=grid></ion-icon>All Categories</a></li><li><a class="inline-flex items-center p-2 cursor-pointer" href=/tags title="All Tags"><ion-icon name=pricetags></ion-icon>All Tags</a></li></ul></div><section class="hidden sm:flex sm:items-center sm:gap-2 md:gap-4"><a class="group inline-flex items-center p-2 rounded-full cursor-pointer hover:bg-primary" href=/posts title=Archives><ion-icon class=group-hover:text-primary-content name=archive></ion-icon></a><a class="group inline-flex items-center p-2 rounded-full cursor-pointer hover:bg-primary" href=/categories title="All Categories"><ion-icon class=group-hover:text-primary-content name=grid></ion-icon></a><a class="group inline-flex items-center p-2 rounded-full cursor-pointer hover:bg-primary" href=/tags title="All Tags"><ion-icon class=group-hover:text-primary-content name=pricetags></ion-icon></a></section></div></nav><div class=flip-container :class="{ 'flip-it': flip }"><div class=flipper><div class=front><div class=container><div class="dream-grid opacity-0"><div class="w-full md:w-1/2 lg:w-1/3 xl:w-1/4 p-4 dream-column"><a class="card bg-base-100 hover:bg-base-content/10 shadow-xl cursor-pointer dark:border dark:border-base-content/30" href=/posts/fichu/><figure><img src=/img/Fichu.jpg alt=Fichu></figure><div class=card-body><h2 class=card-title>Fichu</h2><p class="date text-base-content/60">Sunday, Aug 24, 2025</p><p>Cut out summary from your post content here.</p><div class="card-actions justify-between items-center mt-4"><div class="flex items-center"><span>@</span>
-<span itemprop=author itemscope itemtype=https://schema.org/Person><span itemprop=name>Author Name</span></span></div><div class="flex items-center"><ion-icon name=time class=mr-1></ion-icon><span>1 minute read</span></div></div></div></a></div><div class="w-full md:w-1/2 lg:w-1/3 xl:w-1/4 p-4 dream-column"><a class="card bg-base-100 hover:bg-base-content/10 shadow-xl cursor-pointer dark:border dark:border-base-content/30" href=/posts/chaussette/><figure><img src=/img/Chaussettes.jpg alt=Chaussettes></figure><div class=card-body><h2 class=card-title>Chaussettes</h2><p class="date text-base-content/60">Sunday, Aug 24, 2025</p><p>Cut out summary from your post content here.</p><div class="card-actions justify-between items-center mt-4"><div class="flex items-center"><span>@</span>
-<span itemprop=author itemscope itemtype=https://schema.org/Person><span itemprop=name>Author Name</span></span></div><div class="flex items-center"><ion-icon name=time class=mr-1></ion-icon><span>1 minute read</span></div></div></div></a></div><div class="w-full md:w-1/2 lg:w-1/3 xl:w-1/4 p-4 dream-column"><a class="card bg-base-100 hover:bg-base-content/10 shadow-xl cursor-pointer dark:border dark:border-base-content/30" href=/posts/chale/><figure><img src=/img/Ch%c3%a2le.jpg alt=Chale></figure><div class=card-body><h2 class=card-title>Chale</h2><p class="date text-base-content/60">Sunday, Aug 24, 2025</p><p>Cut out summary from your post content here.</p><div class="card-actions justify-between items-center mt-4"><div class="flex items-center"><span>@</span>
-<span itemprop=author itemscope itemtype=https://schema.org/Person><span itemprop=name>Author Name</span></span></div><div class="flex items-center"><ion-icon name=time class=mr-1></ion-icon><span>1 minute read</span></div></div></div></a></div></div><footer class="flex justify-between items-center gap-2 px-4 py-12"><div><p>© 2025</p><p class=text-sm>🌱
-<span class=text-base-content/60>Powered by <a class=hover:underline href=https://gohugo.io/ target=_blank>Hugo</a> with theme
-<a class=hover:underline href=https://github.com/g1eny0ung/hugo-theme-dream target=_blank>Dream</a>.</span></p></div><div x-data="{ icons: [
-    { name: 'sunny', status: 'n' },
-    { name: 'moon', status: 'y' },
-    { name: 'desktop', status: 'auto' }
-  ] }" class="flex items-center gap-2 h-[32px] px-2 bg-base-100 border border-base-content/30 rounded-full"><template x-for="icon in icons"><div role=button tabindex=0 :aria-label="'Select ' + icon.name + ' mode'" class="group inline-flex justify-center items-center p-1 rounded-full cursor-pointer hover:bg-primary" :class="$store.darkMode.icon() === icon.name && 'bg-primary'" @click=$store.darkMode.toggle(icon.status)><ion-icon :name="`${icon.name}-outline`" class=group-hover:text-primary-content :class="$store.darkMode.icon() === icon.name && 'text-primary-content'"></ion-icon></div></template></div></footer></div></div><div class=back><div class=container><div class="dream-grid dream-grid-about"></div><footer class="flex justify-between items-center gap-2 px-4 py-12"><div><p>© 2025</p><p class=text-sm>🌱
-<span class=text-base-content/60>Powered by <a class=hover:underline href=https://gohugo.io/ target=_blank>Hugo</a> with theme
-<a class=hover:underline href=https://github.com/g1eny0ung/hugo-theme-dream target=_blank>Dream</a>.</span></p></div><div x-data="{ icons: [
-    { name: 'sunny', status: 'n' },
-    { name: 'moon', status: 'y' },
-    { name: 'desktop', status: 'auto' }
-  ] }" class="flex items-center gap-2 h-[32px] px-2 bg-base-100 border border-base-content/30 rounded-full"><template x-for="icon in icons"><div role=button tabindex=0 :aria-label="'Select ' + icon.name + ' mode'" class="group inline-flex justify-center items-center p-1 rounded-full cursor-pointer hover:bg-primary" :class="$store.darkMode.icon() === icon.name && 'bg-primary'" @click=$store.darkMode.toggle(icon.status)><ion-icon :name="`${icon.name}-outline`" class=group-hover:text-primary-content :class="$store.darkMode.icon() === icon.name && 'text-primary-content'"></ion-icon></div></template></div></footer></div></div></div></div><script>window.lightTheme=null,window.darkTheme=null</script><script src=https://cdn.jsdelivr.net/npm/imagesloaded@5.0.0/imagesloaded.pkgd.min.js integrity="sha256-htrLFfZJ6v5udOG+3kNLINIKh2gvoKqwEhHYfTTMICc=" crossorigin=anonymous></script><script src=https://cdn.jsdelivr.net/npm/masonry-layout@4.2.2/dist/masonry.pkgd.min.js integrity="sha256-Nn1q/fx0H7SNLZMQ5Hw5JLaTRZp0yILA/FRexe19VdI=" crossorigin=anonymous></script><script src=/js/grid.min.js></script><script src=/js/main.min.js></script><script type=module src=https://cdn.jsdelivr.net/npm/ionicons@7.4.0/dist/ionicons/ionicons.esm.js integrity="sha256-/IFmi82bIhdYWctu0UddSlJqpnzWm7Vh2C4CM32wF/k=" crossorigin=anonymous></script><script nomodule src=https://cdn.jsdelivr.net/npm/ionicons@7.4.0/dist/ionicons/ionicons.js integrity="sha256-mr7eJMX3VC3F7G32mk4oWp1C6a2tlMYxUdptfT7uKI8=" crossorigin=anonymous></script></body></html>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<title>Home | Cozy Stitches</title>
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;600;700&family=Inter:wght@400;600&display=swap" rel="stylesheet">
+	<link rel="stylesheet" href="css/styles.css">
+</head>
+<body>
+	<header class="site-header">
+		<div class="container header-inner">
+			<a class="brand" href="index.html">Cozy Stitches</a>
+			<nav class="main-nav" aria-label="Primary">
+				<a href="index.html" class="active">Welcome</a>
+				<a href="shop.html">Shop</a>
+				<a href="about.html">Who am I</a>
+			</nav>
+		</div>
+	</header>
+
+	<main>
+		<section class="hero">
+			<div class="container hero-inner">
+				<div class="hero-copy">
+					<h1>Handmade warmth, stitch by stitch</h1>
+					<p>Discover scarves, socks, and cozy accessories crafted with care. Each piece is unique, comfortable, and made to last.</p>
+					<div class="hero-ctas">
+						<a class="btn btn-primary" href="shop.html">Shop now</a>
+						<a class="btn" href="about.html">Learn about me</a>
+					</div>
+				</div>
+				<div class="hero-media placeholder-img" aria-hidden="true"></div>
+			</div>
+		</section>
+
+		<section class="features">
+			<div class="container grid-3">
+				<div class="card">
+					<h3>Natural fibers</h3>
+					<p>Soft wools and blends chosen for comfort and durability.</p>
+				</div>
+				<div class="card">
+					<h3>Thoughtful design</h3>
+					<p>Timeless patterns that pair easily with everyday outfits.</p>
+				</div>
+				<div class="card">
+					<h3>Small-batch</h3>
+					<p>Every item is handmade, so no two are exactly alike.</p>
+				</div>
+			</div>
+		</section>
+	</main>
+
+	<footer class="site-footer">
+		<div class="container footer-inner">
+			<p>© <span id="year"></span> Cozy Stitches</p>
+			<p><a href="shop.html">Shop</a> · <a href="about.html">Who am I</a></p>
+		</div>
+	</footer>
+
+	<script>
+		const yearEl = document.getElementById('year');
+		if (yearEl) yearEl.textContent = new Date().getFullYear();
+	</script>
+</body>
+</html> 
